changes applied on find job for spacing on mobile and max with on hero banner, then corrected link on two columns round image on page php

--- a/src/styles/sections/_find-job.scss
+++ b/src/styles/sections/_find-job.scss
@@ -2,9 +2,9 @@
     margin-top: -150px;
     z-index: 1;
 
-    // @media (max-width: 767px) {
-    //     margin-top: -150px;
-    // }
+    @media (max-width: 767px) {
+        margin-top: -100px;
+    }
 }
 .find-job{
 
